<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="68dp">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/etLocalidadesFilter"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_weight="1"/>

        <ProgressBar
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="right"
                android:id="@+id/pbLocalidade"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_localidade_activity"
                android:layout_gravity="top"/>

    </FrameLayout>


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false">

    </LinearLayout>

    <ListView
            android:id="@+id/lvLocalidades"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

</LinearLayout>